--- a/letmeshare/css/style.css
+++ b/letmeshare/css/style.css
@@ -1,7 +1,7 @@
 body{
 	height: auto;
-	width: 800px;
-	//margin-left:350px;
+	width: 60%;
+	/*margin-left:350px;*/
 	font-family: sans-serif;
 	font-size: 18px;
 	margin-top: 10px;
