--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body{
 	height: auto;
 	width: 60%;
-	/*margin-left:350px;*/
 	font-family: sans-serif;
 	font-size: 18px;
 	margin-top: 10px;
@@ -11,8 +10,8 @@ body{
 }
 
 img {
-	margin-left: 250px;
-	width: 300px;
+	margin-left: 33%;
+	width: 35%;
 }
 
 .card {
@@ -33,7 +32,6 @@ img {
     height: auto;
     width:100%;
     padding: 10px;
-	//background-color:#336699;
 }
 
 #card2 {
@@ -69,8 +67,8 @@ label {
   font-weight:normal;
   position:absolute;
   text-align: center;
-  left: 350px;
-  top: 20px;
+  left: 45%;
+  top: 20%;
   transition:0.2s ease all; 
   -moz-transition:0.2s ease all; 
   -webkit-transition:0.2s ease all;
