--- a/linkpreview/css/style.css
+++ b/linkpreview/css/style.css
@@ -14,7 +14,7 @@ background: linear-gradient(to left, #ED4264 , #FFEDBC); /* W3C, IE 10+/ Edge, F
 }
 
 .box{
-    display: none;
+   // display: none;
     width: 100%;
 }
 
