--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,14 @@ img {
 	background-color: #fff;
     display:inline-block;
     margin-top: 2%;
+	max-width:70%;
     border-radius: 8px;
     border-bottom: 1px solid rgb(170, 170, 170);
     padding: 10px;
     box-shadow: rgb(85, 85, 85) 0px 4px 6.66667px;
 }
 
-#form input {
+#form input[type="text"]{
 	width:50%;
 	text-align:center;
 	border:none;
@@ -69,7 +70,7 @@ img {
   -o-transition: all 0.30s ease-in-out;
 }
 
-#form input:focus {
+#form input[type="text"]:focus {
 	outline:none;
 	text-align:center;
 	border-bottom:2px solid purple;
@@ -117,84 +118,41 @@ img {
   opacity: 1;
   right: -15px;
 }
-/* Button On Hover ================================ 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,900);
-* {
-  box-sizing: inherit;
-  -webkit-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: .6s;
-          transition-duration: .6s;
-  -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
+#bar{
+	background-color:#EEE;
+	padding:5px;
+	
 }
-
-
-.btn {
-  color: ghostwhite;
-  cursor: pointer;
-  display: block;
-  left: 320px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 45px;
-  margin: 0 auto 2em;
-  text-align: center;
-  max-width: 160px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-  vertical-align: middle;
-  width: 100%;
+.button_like {
+    background-image: url(like.png);
+    background-repeat: no-repeat; 
+    background-position: 2px 0;
+    border: none;           
+    cursor: pointer;       
+    height: 32px;          
+    padding-left: 40px;    
+    vertical-align: middle;
+    color: hsl(0, 0%, 33%);
+    outline: none;
 }
-@media (min-width: 400px) {
-  .btn {
-    display: inline-block;
-    margin-right: 2.5em;
-  }
-  .btn:nth-of-type(even) {
-    margin-right: 0;
-  }
+.button_unlike {
+    background-image: url(like.png);
+    background-color: hsl(0, 0%, 97%);
+    background-repeat: no-repeat; 
+    background-position: 2px -31px;
+    border: none;           
+    cursor: pointer;       
+    height: 32px;          
+    padding-left: 40px;    
+    vertical-align: middle;
+    color: hsl(0, 0%, 33%);
+    border-color: hsl(0, 0%, 60%);
+    -webkit-box-shadow: inset 0 1px 0 hsl(0, 100%, 100%),0 1px 0 hsla(0, 0%, 0%, .08);
+    box-shadow: inset 0 1px 0 hsl(0, 100%, 100%),0 1px 0 hsla(0, 0%, 0%, .08);
+    outline: none;
+ 
 }
-@media (min-width: 600px) {
-  .btn:nth-of-type(even) {
-    margin-right: 2.5em;
-  }
-  .btn:nth-of-type(5) {
-    margin-right: 0;
-  }
+#desc{
+	border:1px solid black;
+	padding:5px;
 }
-.btn:hover {
-  text-decoration: none;
-}
-
-.btn-1 {
-  background: deepskyblue;
-  font-weight: 100;
-}
-.btn-1 svg {
-  height: 45px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.btn-1 rect {
-  fill: none;
-  stroke: red;
-  stroke-width: 2;
-  stroke-dasharray: 422, 0;
-}
-
-.btn-1:hover {
-  background:deepskyblue;
-  font-weight: 900;
-  letter-spacing: 1px;
-}
-.btn-1:hover rect {
-  stroke-width: 5;
-  stroke-dasharray: 15, 310;
-  stroke-dashoffset: 48;
-  -webkit-transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
-  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
-}*/
